all done I guess

--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ footer {
   left: 2rem;
   right: 2rem;
   top: 3rem;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 .burger input[type=checkbox]:checked ~ .burger-content li {
   justify-content: center;
@@ -433,8 +433,6 @@ footer {
 
 .h2-home h2 {
   margin-top: 2rem;
-  margin-bottom: 1rem;
-  text-align: center;
   font-size: 2rem;
 }
 
@@ -451,7 +449,7 @@ footer {
   margin-bottom: 2rem;
   padding-bottom: 1rem;
   background-color: rgb(255, 255, 255);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 .gallery-wrapper .gallery-item p {
   font-size: 1.2rem;
@@ -459,6 +457,10 @@ footer {
 }
 .gallery-wrapper .gallery-item img {
   margin-bottom: 1rem;
+}
+
+fieldset {
+  border: none;
 }
 
 .contact {
@@ -588,16 +590,25 @@ footer {
   }
 }
 .article-page-wrapper .one {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(images/skaventide.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(images/skaventide2.jpg);
+}
+.article-page-wrapper .one:hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url(images/skaventide2.jpg);
 }
 .article-page-wrapper .two {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(images/black.jpg);
 }
+.article-page-wrapper .two:hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url(images/black.jpg);
+}
 .article-page-wrapper .three {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(images/tyr5.jpg);
 }
+.article-page-wrapper .three:hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url(images/tyr5.jpg);
+}
 .article-page-wrapper section {
-  border-radius: 0.3rem;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   width: 17rem;
   padding-top: 16rem;
   padding-bottom: 2rem;
@@ -616,7 +627,10 @@ footer {
 }
 .article-page-wrapper section a {
   text-decoration: none;
-  color: white;
+  color: rgb(255, 255, 255);
+}
+.article-page-wrapper section a:hover {
+  color: rgb(219, 219, 219);
 }
 
 h2 {
@@ -648,33 +662,37 @@ h2 {
   }
 }
 
-.scroll-arrow {
+.scroll-btn {
   position: fixed;
   right: 1rem;
   bottom: 1rem;
   width: 2.5rem;
   height: 2.5rem;
-  background: rgb(0, 0, 0);
+  background: rgb(255, 255, 255);
   border-radius: 50%;
   z-index: 9;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.scroll-arrow:hover {
-  background-color: white;
   border-style: solid;
-  border-color: black;
+  border-color: rgb(0, 0, 0);
+}
+.scroll-btn:hover {
+  background-color: black;
+  border: none;
 }
 
-#scroll-text {
-  margin-top: 0.7rem;
+#scroll-arrow {
+  background-image: url(images/arrow.png);
+  background-position: center;
+  background-size: 100%;
   color: white;
   z-index: 10;
   font-weight: 800;
   font-size: 2rem;
   padding: 1rem;
 }
-#scroll-text:hover {
+#scroll-arrow:hover {
   color: black;
+  background-image: url(images/arrow-hover.png);
 }/*# sourceMappingURL=styles.css.map */
