file structure change

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
   align-items: center;
   text-align: center;
   color: white;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(images/hero.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(../images/hero.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -25,19 +25,16 @@
     font-size: 3rem;
   }
 }
-
 @media screen and (max-width: 350px) {
   .hero {
     font-size: 2.5rem;
   }
 }
-
 @media screen and (max-width: 270px) {
   .hero {
     font-size: 2rem;
   }
 }
-
 body {
   background-color: rgb(240, 243, 243);
 }
@@ -61,36 +58,29 @@ footer {
   display: flex;
   justify-content: flex-end;
 }
-
 .burger .close {
   display: none;
   width: 2rem;
   margin-top: 0.5rem;
   margin-right: 4vw;
 }
-
 .burger input[type=checkbox] {
   display: none;
 }
-
 .burger label {
   display: inline-block;
   cursor: pointer;
 }
-
 .burger label img {
   width: 3rem;
   margin-right: 2vw;
 }
-
-.burger input[type=checkbox]:checked+.burger-label .open {
+.burger input[type=checkbox]:checked + .burger-label .open {
   display: none;
 }
-
-.burger input[type=checkbox]:checked+.burger-label .close {
+.burger input[type=checkbox]:checked + .burger-label .close {
   display: block;
 }
-
 .burger .burger-content {
   display: none;
   position: absolute;
@@ -102,23 +92,19 @@ footer {
   z-index: 1;
   font-size: 1.5rem;
 }
-
 .burger .burger-content li {
   list-style-type: none;
 }
-
 .burger .burger-content li a {
   display: block;
   margin-bottom: 1rem;
   text-decoration: none;
   text-align: center;
 }
-
 .burger .burger-content li a:last-child {
   margin-bottom: 0;
 }
-
-.burger input[type=checkbox]:checked~.burger-content {
+.burger input[type=checkbox]:checked ~ .burger-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -126,15 +112,13 @@ footer {
   left: 2rem;
   right: 2rem;
   top: 3rem;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
-
-.burger input[type=checkbox]:checked~.burger-content li {
+.burger input[type=checkbox]:checked ~ .burger-content li {
   justify-content: center;
   align-items: center;
 }
-
-.burger input[type=checkbox]:checked~.burger-content li a {
+.burger input[type=checkbox]:checked ~ .burger-content li a {
   color: black;
   border-bottom-style: solid;
   border-width: 0.05rem;
@@ -145,13 +129,11 @@ footer {
     margin-top: 3rem;
     height: 50vh;
   }
-
   .burger {
     position: fixed !important;
     width: 100%;
     top: 0px !important;
   }
-
   .burger-content {
     align-items: center;
     display: flex !important;
@@ -162,17 +144,14 @@ footer {
     width: 100%;
     justify-content: center;
   }
-
   .burger-content ul {
     margin: 0;
     padding: 0;
   }
-
   .burger-content li {
     display: inline;
     margin: 0 !important;
   }
-
   .burger-content li a {
     display: inline !important;
     margin-bottom: 0 !important;
@@ -181,48 +160,39 @@ footer {
     color: inherit !important;
     margin: 1rem;
   }
-
   .burger-content li a:hover {
     border-bottom-style: solid !important;
     border-color: #000000 !important;
   }
 }
-
 .articles {
   display: flex;
   flex-direction: column;
   margin-top: 1rem;
 }
-
 .articles .article-title {
   font-weight: 650;
   font-size: 1.5rem;
 }
-
 .articles .article-desc {
   color: #3a3a3a;
 }
-
 .articles a {
   text-decoration: none;
   color: black;
 }
-
 .articles .top {
   width: 97%;
   align-self: center;
   margin-bottom: 1rem;
 }
-
 .articles .top p {
   margin-left: 1rem;
 }
-
 .articles .top img {
   width: 100%;
   display: block;
 }
-
 .articles .bottom-container {
   display: flex;
   width: 95%;
@@ -233,12 +203,10 @@ footer {
   border-width: 0.1rem;
   border-color: #a1a1a1;
 }
-
 .articles .bottom-container .bottom {
   flex: 1;
   margin: 0.4rem;
 }
-
 .articles .bottom-container .bottom img {
   width: 100%;
   display: block;
@@ -257,40 +225,33 @@ footer {
     border-width: 0.2rem;
     border-color: rgb(219, 219, 219);
   }
-
   .articles .top {
     align-self: flex-start;
   }
-
   .articles .top .article-title {
     font-weight: 650;
     font-size: 2.5rem;
     margin-left: 0;
   }
-
   .articles .top p {
     margin-left: 0rem;
     font-size: 1.1rem;
   }
-
   .articles .bottom-container {
     flex-direction: column !important;
     width: 40%;
     border-style: none;
   }
-
   .articles .bottom-container .bottom {
     margin: 0 auto !important;
     padding-bottom: 1rem;
   }
 }
-
 .article-wrapper {
   background-color: rgb(240, 243, 243);
   width: 100%;
   margin-top: 1rem;
 }
-
 .article-wrapper .article-main .grid-container {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -301,39 +262,31 @@ footer {
   row-gap: 1rem;
   margin-top: 1rem;
 }
-
 .article-wrapper .article-main .grid-container img {
   width: 100%;
 }
-
 .article-wrapper .article-main .item1 {
   grid-area: 1/1/1/1;
 }
-
 .article-wrapper .article-main .item2 {
   grid-area: 2/1/2/1;
 }
-
 .article-wrapper .article-main .item3 {
   grid-area: 3/1/3/1;
 }
-
 .article-wrapper .article-main ul {
   margin-left: 3rem;
   margin-bottom: 1rem;
   margin-top: 1rem;
 }
-
 .article-wrapper .article-main figure {
   margin-top: 0.5rem;
   text-align: center;
   color: #3a3a3a;
 }
-
 .article-wrapper .article-main figure img {
   width: 95%;
 }
-
 @media screen and (min-width: 900px) {
   .article-wrapper {
     width: 100%;
@@ -341,54 +294,44 @@ footer {
     max-width: 1200px;
     margin-top: 3rem;
   }
-
   .article-wrapper .article-intro {
     width: 40rem !important;
   }
-
   .article-wrapper h2 {
     text-align: center;
     margin-bottom: 2rem !important;
     font-size: 2rem !important;
   }
-
   .article-wrapper .article-main {
     width: 40vw;
     max-width: 700px;
     margin: 0 auto;
   }
-
   .article-wrapper .article-main .grid-container {
     margin: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto;
   }
-
   .article-wrapper .article-main .item1 {
     grid-area: 1/1/2/2;
   }
-
   .article-wrapper .article-main .item2 {
     grid-area: 1/2/2/3;
   }
-
   .article-wrapper .article-main .item3 {
     grid-area: 2/1/3/3;
   }
-
   .article-wrapper .article-main figure img {
     width: 100%;
   }
 }
-
 .article-wrapper h2 {
   font-size: 1.5rem;
   width: 90%;
   margin: 0 auto;
   font-weight: 550;
 }
-
 .article-wrapper .article-intro {
   font-size: 1.3rem;
   font-weight: 500;
@@ -403,13 +346,11 @@ footer {
   padding-bottom: 1rem;
   padding-top: 1rem;
 }
-
 .article-wrapper .part-heading {
   font-size: 2rem;
   font-weight: 650;
   padding-top: 1rem;
 }
-
 .article-wrapper .guide-step {
   width: 90%;
   margin: 0 auto;
@@ -421,17 +362,14 @@ footer {
   border-radius: 0.5rem;
   padding-bottom: 1rem;
 }
-
 .article-wrapper .guide-step img {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
 }
-
 .article-wrapper .guide-step:last-child {
   border-width: 0.2rem;
   margin-bottom: 2rem;
 }
-
 @media screen and (min-width: 768px) {
   .article-wrapper .guide-step {
     flex-direction: row;
@@ -439,12 +377,10 @@ footer {
     padding-bottom: 0;
     padding-right: 1rem;
   }
-
   .article-wrapper .guide-step p {
     margin: 0 auto;
     margin-left: 1rem;
   }
-
   .article-wrapper .guide-step img {
     height: 65%;
     width: 65%;
@@ -453,11 +389,9 @@ footer {
     border-bottom-left-radius: 0.5rem;
   }
 }
-
 .article-wrapper img {
   border-radius: 0.5rem;
 }
-
 .article-wrapper p {
   width: 90%;
   margin: 0 auto;
@@ -478,7 +412,6 @@ footer {
   background-attachment: fixed;
   background-position: 50% 90%;
 }
-
 .image-heading h1 {
   margin-bottom: 2rem;
   font-size: 3rem;
@@ -487,21 +420,19 @@ footer {
 }
 
 .skaventide {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgb(0, 0, 0)), url(images/skavenhero2.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgb(0, 0, 0)), url(../images/skavenhero2.jpg);
 }
 
 .bt {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgb(0, 0, 0)), url(images/black.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgb(0, 0, 0)), url(../images/black.jpg);
 }
 
 .tyr {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgb(0, 0, 0)), url(images/tyrbanner.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgb(0, 0, 0)), url(../images/tyrbanner.jpg);
 }
 
 .h2-home h2 {
   margin-top: 2rem;
-  margin-bottom: 1rem;
-  text-align: center;
   font-size: 2rem;
 }
 
@@ -512,23 +443,24 @@ footer {
   display: flex;
   flex-direction: column;
 }
-
 .gallery-wrapper .gallery-item {
   display: flex;
   flex-direction: column;
   margin-bottom: 2rem;
   padding-bottom: 1rem;
   background-color: rgb(255, 255, 255);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
-
 .gallery-wrapper .gallery-item p {
   font-size: 1.2rem;
   margin-left: 1rem;
 }
-
 .gallery-wrapper .gallery-item img {
   margin-bottom: 1rem;
+}
+
+fieldset {
+  border: none;
 }
 
 .contact {
@@ -538,7 +470,6 @@ footer {
 .page-contact {
   margin: 0 auto !important;
 }
-
 @media screen and (min-width: 900px) {
   .page-contact {
     margin-bottom: 2rem !important;
@@ -558,19 +489,16 @@ footer {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
-
 .page-contact form,
 .contact form {
   width: 100%;
   font-weight: 600;
 }
-
 .page-contact form .string-input,
 .contact form .string-input {
   width: 100%;
   margin-right: 1rem;
 }
-
 .page-contact form textarea,
 .contact form textarea {
   resize: none;
@@ -578,12 +506,10 @@ footer {
   margin-right: 1rem;
   height: 4rem;
 }
-
 .page-contact form input,
 .contact form input {
   margin-bottom: 0.5rem;
 }
-
 .page-contact .button,
 .contact .button {
   width: 100%;
@@ -599,13 +525,11 @@ footer {
   font-weight: 550;
   font-size: 1.2rem;
 }
-
 .page-contact .button:hover,
 .contact .button:hover {
   background-color: rgb(240, 243, 243);
   cursor: pointer;
 }
-
 .page-contact p,
 .contact p {
   border-top-style: solid;
@@ -620,75 +544,71 @@ footer {
     position: sticky !important;
     top: 5rem;
   }
-
   .contact,
   .page-contact {
     display: flex !important;
     flex-direction: column;
   }
-
   .gallery-wrapper {
     max-width: 1200px;
     display: flex;
     flex-direction: row;
   }
-
   .gallery-wrapper .gallery-item {
     border-radius: 0;
   }
-
   .gallery-wrapper .gallery-item img {
     border-radius: 0;
     width: 100%;
   }
 }
-
 .article-page-wrapper {
   width: 60%;
   margin: auto;
   margin-top: 1rem;
 }
-
 .article-page-wrapper h2 {
   border-bottom-style: solid;
   border-color: rgb(219, 219, 219);
 }
-
 @media screen and (max-width: 900px) {
   .article-page-wrapper {
     width: 95%;
     margin: 0 auto;
   }
 }
-
 .article-page-wrapper .articles-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 1rem;
 }
-
 @media screen and (max-width: 900px) {
   .article-page-wrapper .articles-container {
     flex-direction: column;
     margin: 0 auto;
   }
 }
-
 .article-page-wrapper .one {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(images/skaventide.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(../images/skaventide2.jpg);
 }
-
+.article-page-wrapper .one:hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url(../images/skaventide2.jpg);
+}
 .article-page-wrapper .two {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(images/black.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(../images/black.jpg);
 }
-
+.article-page-wrapper .two:hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url(../images/black.jpg);
+}
 .article-page-wrapper .three {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(images/tyr5.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url(../images/tyr5.jpg);
 }
-
+.article-page-wrapper .three:hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url(../images/tyr5.jpg);
+}
 .article-page-wrapper section {
-  border-radius: 0.3rem;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   width: 17rem;
   padding-top: 16rem;
   padding-bottom: 2rem;
@@ -700,16 +620,17 @@ footer {
   font-weight: 700;
   text-align: center;
 }
-
 @media screen and (max-width: 900px) {
   .article-page-wrapper section {
     width: 100%;
   }
 }
-
 .article-page-wrapper section a {
   text-decoration: none;
-  color: white;
+  color: rgb(255, 255, 255);
+}
+.article-page-wrapper section a:hover {
+  color: rgb(219, 219, 219);
 }
 
 h2 {
@@ -730,11 +651,9 @@ h2 {
   text-align: justify;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
-
 .specs .specs-to-left {
   text-align: left;
 }
-
 @media screen and (min-width: 600px) {
   .specs {
     width: 60vw;
@@ -743,5 +662,37 @@ h2 {
   }
 }
 
+.scroll-btn {
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  background: rgb(255, 255, 255);
+  border-radius: 50%;
+  z-index: 9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-style: solid;
+  border-color: rgb(0, 0, 0);
+}
+.scroll-btn:hover {
+  background-color: black;
+  border: none;
+}
 
-
+#scroll-arrow {
+  background-image: url(../images/arrow.png);
+  background-position: center;
+  background-size: 100%;
+  color: white;
+  z-index: 10;
+  font-weight: 800;
+  font-size: 2rem;
+  padding: 1rem;
+}
+#scroll-arrow:hover {
+  color: black;
+  background-image: url(../images/arrow-hover.png);
+}/*# sourceMappingURL=styles.css.map */
